--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,22 +1,23 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 @font-face {
-    font-family: 'Android';
-    src: url('../fontes/idroid.otf') format('opentype');
-    font-weight: normal;
+    font-family: 'Island Moments', cursiva;
+    src: url('IslandMoments-Regular.tff') format('opentype');
 }
 
 :root {
-    --cor0: #c5ebd6;
-    --cor1: #83e1ad;
-    --cor2: #3ddc84;
-    --cor3: #2fa866;
+    --cor0: #85f8b8;
+    --cor1: #00d560;
+    --cor2: #fff822;
+    --cor3: #ff2323;
     --cor4: #1a5c37;
-    --cor5: #063d1e;
+    --cor5: #000000;
 
     --font-padrao: arial, verdana, helvetica, sans-serif;
     --font-destaque: 'Bebas Neue', cursive;
-    --font-android: 'Android', cursive;
+    --font-reggae: 'Island Moments', cursiva;
 }
 
 * {
@@ -34,7 +35,7 @@ a.externo::after {
 }
 
 header {
-    background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
+    background-image: linear-gradient(to left, var(--cor1), var(--cor2), var(--cor3));
     min-height: 150px;
     text-align: center;
     padding-top: 40px;
@@ -61,13 +62,13 @@ header > p {
 }
 
 nav {
-    background-color: var(--cor5);
+    background-image: linear-gradient(to left, var(--cor1), var(--cor2), var(--cor3));
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.267);
 }
 
 nav > a {
-    color: var(--cor0);
+    color: var(--cor5);
     padding: 10px;
     border-radius: 5px;
     text-decoration: none;
@@ -95,9 +96,9 @@ main {
 
 main h1 {
     color: var(--cor5);
-    font-family: var(--font-android);
+    font-family: var(--font-reggae);
     font-weight: normal;
-    font-size: 3em;
+    font-size: 1.4em;
 }
 
 main h2 {
@@ -147,6 +148,22 @@ main img.pequena {
     max-width: 350px;
     display: block;
     margin: auto;
+}
+
+div.video {
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 58%;
+    position: relative;
+}
+
+div.video > iframe {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
 }
 
 aside {
